# thesis_work

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  run.sh  setup.cfg
.github/workflows/: pre-commit.yaml  tests.yaml
docs/openapi/schema/: thesis.yaml
docs/source/: conf.py  index.rst
domain/erd/: erd_conceptual.mwb  erd_conceptual.mwb.bak
envs/: .env.sample
openapi/schema/: thesis.yaml
sql/raw/: create_database.sql
sql/raw/innocent/: create_tables.sql
src/apps/api/: apps.py  urls.py  views.py
src/apps/authentication/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
src/apps/authentication/migrations/: 0001_initial.py
src/apps/calls/: apps.py  consumers.py  routing.py
src/apps/chats/: admin.py  apps.py  exceptions.py  filters.py  forms.py  models.py  urls.py  views.py
src/apps/chats/migrations/: 0001_initial.py  0002_alter_electedmessage_options.py
src/apps/chats/serializers/: chats.py  messages.py
src/apps/posts/: admin.py  apps.py  filters.py  models.py  paginations.py  urls.py  views.py
src/apps/posts/migrations/: 0001_initial.py
src/apps/posts/serializers/: comments.py  posts.py
src/apps/profiles/: admin.py  apps.py  filters.py  models.py  services.py  urls.py  views.py
src/apps/profiles/migrations/: 0001_initial.py  0002_profile_is_private.py
src/apps/profiles/serializers/: profiles.py
src/common/: exceptions.py  models.py  openapi.py  validators.py
src/common/utils/: docs_schema.py  hooks.py
src/config/: asgi.py  celery.py  env.py  settings.py  urls.py
tests/: test_bar.py
tests/common/: conftest.py  test_utils.py
